--- a/en/schools.html
+++ b/en/schools.html
@@ -3,76 +3,219 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Audio Storytelling in Education · Kairu</title>
-  <meta name="description" content="Exploring screen-free audio storytelling to support listening, language development and autonomy in Early Years education.">
+  <title>Schools · Screen-free Audio Storytelling · Kairu Tech</title>
+  <meta name="description" content="Exploring screen-free audio storytelling to support listening, language development and autonomy in Early Years and early primary education.">
+  <meta property="og:title" content="Schools · Screen-free Audio Storytelling · Kairu Tech">
+  <meta property="og:description" content="A short page for schools: exploring audio storytelling without screens in Early Years and early primary.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://kairu.tech/og-image.jpg">
+  <link rel="icon" href="/favicon.ico">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = { theme: { extend: { colors: { kairu: {
-      600:'#2563eb',700:'#1d4ed8'
+      50:'#eff6ff',100:'#dbeafe',200:'#bfdbfe',300:'#93c5fd',400:'#60a5fa',
+      500:'#3b82f6',600:'#2563eb',700:'#1d4ed8',800:'#1e40af',900:'#1e3a8a'
     }}}}};
   </script>
 
   <style>
-    .container-narrow { max-width: 900px; }
+    .card {
+      border-radius: 1rem;
+      box-shadow: 0 8px 24px rgba(2,6,23,.06);
+      background: rgba(255,255,255,.9);
+      backdrop-filter: blur(6px);
+    }
+    .container-narrow { max-width: 1100px; }
   </style>
 </head>
 
 <body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
 
-  <main class="mx-auto px-6 py-16 container-narrow">
+<header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
+  <div class="mx-auto px-4 sm:px-6 container-narrow">
+    <div class="flex items-center justify-between h-16">
+      <a href="/en/" class="flex items-center gap-3">
+        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-kairu-600">
+          <path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z"
+            stroke="currentColor" stroke-width="1.2" fill="none"/>
+        </svg>
+        <span class="font-semibold text-lg">Kairu <span class="text-kairu-600">Tech</span></span>
+      </a>
 
-    <h1 class="text-3xl sm:text-4xl font-bold leading-tight">
-      Exploring screen-free audio storytelling in education
-    </h1>
+      <!-- Keep nav minimal (not adding Schools) -->
+      <nav class="hidden md:flex items-center gap-6 text-sm">
+        <a href="/en/" class="hover:text-kairu-600">Home</a>
+        <a href="/en/contact.html" class="hover:text-kairu-600">Contact</a>
+        <span class="text-slate-300">|</span>
+        <a href="/" class="hover:text-kairu-600">ES</a>
+        <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">
+          Let’s talk
+        </a>
+      </nav>
 
-    <p class="mt-6 text-lg text-slate-600">
-      This page provides context about an ongoing exploration into how <strong>audio and storytelling without screens</strong>
-      can support listening, language development and autonomy in <strong>Early Years and early primary education</strong>.
-    </p>
+      <button id="menuBtn" class="md:hidden p-2" aria-label="Open menu">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path d="M3 6h18M3 12h18M3 18h18"/>
+        </svg>
+      </button>
+    </div>
+  </div>
 
-    <section class="mt-10 space-y-6 text-slate-700">
-      <p>
-        My name is Alex Barrena. I work independently with schools and educational projects to explore
-        simple, low-friction approaches to learning that fit naturally into classroom routines.
+  <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
+    <div class="px-4 py-3 flex flex-col gap-3 text-sm">
+      <a href="/en/" class="hover:text-kairu-600">Home</a>
+      <a href="/en/contact.html" class="hover:text-kairu-600">Contact</a>
+      <a href="/" class="hover:text-kairu-600">ES</a>
+      <a href="/en/contact.html"
+         class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">
+        Let’s talk
+      </a>
+    </div>
+  </div>
+</header>
+
+<!-- HERO -->
+<section class="relative overflow-hidden">
+  <div class="mx-auto px-4 sm:px-6 pt-16 pb-10 container-narrow">
+    <div class="grid md:grid-cols-2 gap-10 items-start">
+
+      <div>
+        <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight">
+          Schools · <span class="text-kairu-600">Audio Storytelling</span>
+        </h1>
+
+        <p class="mt-5 text-lg text-slate-600">
+          This page provides context about an ongoing exploration into how
+          <strong>screen-free audio storytelling</strong> can support listening, language development
+          and autonomy in <strong>Early Years and early primary education</strong>.
+        </p>
+
+        <div class="mt-6 flex gap-3 flex-wrap">
+          <a href="/en/contact.html"
+             class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
+            Get in touch
+          </a>
+          <a href="#how" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
+            How it works
+          </a>
+        </div>
+
+        <div class="mt-6 text-xs text-slate-500">
+          Screen-free learning · Listening & language · Classroom routines · Ages 3–8
+        </div>
+      </div>
+
+      <div class="card p-6">
+        <h2 class="text-lg font-semibold">Important note</h2>
+        <p class="mt-3 text-sm text-slate-700">
+          This is <strong>not a sales page</strong> and does not promote a specific product.
+          The goal is to learn from schools and understand whether this approach is pedagogically relevant,
+          and under what conditions it makes sense in practice.
+        </p>
+        <p class="mt-4 text-xs text-slate-500">
+          Short conversations · No commitment · No disruption to current routines
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- WHAT -->
+<section class="py-16 bg-white/60 border-y border-slate-200/60">
+  <div class="mx-auto px-4 sm:px-6 container-narrow">
+    <h2 class="text-3xl font-bold">What we are exploring</h2>
+
+    <div class="mt-6 grid md:grid-cols-3 gap-6">
+      <div class="card p-6">
+        <h3 class="font-semibold">Listening & comprehension</h3>
+        <p class="mt-2 text-sm text-slate-600">
+          How audio storytelling supports attention, listening skills and narrative understanding in Early Years.
+        </p>
+      </div>
+
+      <div class="card p-6">
+        <h3 class="font-semibold">Language exposure</h3>
+        <p class="mt-2 text-sm text-slate-600">
+          How regular listening moments can reinforce vocabulary and oral language naturally, without screens.
+        </p>
+      </div>
+
+      <div class="card p-6">
+        <h3 class="font-semibold">Calm routines & autonomy</h3>
+        <p class="mt-2 text-sm text-slate-600">
+          Practical classroom uses: listening corners, calm time, transitions and independent learning moments.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- HOW -->
+<section id="how" class="py-16">
+  <div class="mx-auto px-4 sm:px-6 container-narrow">
+    <h2 class="text-3xl font-bold">How it works</h2>
+
+    <div class="mt-8 grid md:grid-cols-3 gap-6">
+      <div class="card p-6">
+        <p class="text-xs uppercase tracking-wider text-slate-500">Step 1</p>
+        <h3 class="font-semibold mt-1">A short conversation</h3>
+        <p class="text-sm text-slate-600 mt-2">
+          A quick exchange with a member of your leadership or early years team to understand your context and routines.
+        </p>
+      </div>
+
+      <div class="card p-6">
+        <p class="text-xs uppercase tracking-wider text-slate-500">Step 2</p>
+        <h3 class="font-semibold mt-1">Fit & conditions</h3>
+        <p class="text-sm text-slate-600 mt-2">
+          We identify if this approach could be relevant, and what would be required for it to be useful in practice.
+        </p>
+      </div>
+
+      <div class="card p-6">
+        <p class="text-xs uppercase tracking-wider text-slate-500">Step 3</p>
+        <h3 class="font-semibold mt-1">Optional pilot idea</h3>
+        <p class="text-sm text-slate-600 mt-2">
+          If relevant, we outline what a low-risk pilot could look like (without impacting your existing program).
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- CTA -->
+<section class="py-16 bg-gradient-to-r from-kairu-600 to-kairu-800 text-white">
+  <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
+    <div class="md:col-span-2">
+      <h2 class="text-3xl font-bold">Open to a brief conversation</h2>
+      <p class="mt-2 text-white/80">
+        If audio storytelling without screens is relevant to your early years context,
+        I’d be happy to exchange perspectives and learn from your experience.
       </p>
+    </div>
+    <div class="md:justify-self-end">
+      <a href="/en/contact.html"
+         class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
+        Contact
+      </a>
+    </div>
+  </div>
+</section>
 
-      <p>
-        The current focus is on <strong>audio storytelling</strong> as a pedagogical tool that can be used
-        during moments such as story time, listening corners, calm periods or transitions,
-        without introducing screens or additional complexity for teachers.
-      </p>
+<footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
+  <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
+    <p>© <span id="year"></span> Kairu Tech · Madrid & London</p>
+  </div>
+</footer>
 
-      <p>
-        This is <strong>not a sales initiative</strong> and does not involve promoting a specific product.
-        The goal is purely to understand whether this type of approach is pedagogically relevant,
-        and under what conditions it could make sense in practice.
-      </p>
-    </section>
-
-    <section class="mt-10 bg-white rounded-xl border border-slate-200 p-6">
-      <h2 class="font-semibold text-lg mb-3">What this exploration looks at</h2>
-      <ul class="list-disc list-inside space-y-2 text-slate-700">
-        <li>Listening and comprehension in Early Years</li>
-        <li>Language exposure and storytelling</li>
-        <li>Independent and calm learning moments</li>
-        <li>Screen-free classroom routines</li>
-      </ul>
-    </section>
-
-    <section class="mt-10 text-slate-700">
-      <p>
-        I’m currently speaking with a small number of schools to exchange perspectives and learn
-        from their experience. If this topic is relevant to your educational context,
-        I’d be happy to briefly connect or exchange views.
-      </p>
-    </section>
-
-    <footer class="mt-16 text-sm text-slate-500">
-      Alex Barrena · Madrid & London
-    </footer>
-
-  </main>
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+  document.getElementById('menuBtn').addEventListener('click', ()=>{
+    document.getElementById('mobileMenu').classList.toggle('hidden');
+  });
+</script>
 
 </body>
 </html>
