--- a/engineering.html
+++ b/engineering.html
@@ -1,240 +1,255 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KairuTech · Visualización avanzada para construcción</title>
-  <meta name="description" content="Visualización avanzada sobre el terreno real para reducir riesgos y tomar mejores decisiones antes de construir." />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kairu Tech · Visualización en parcela para construcción e infraestructuras</title>
+  <meta name="description" content="Toma decisiones críticas antes de construir. Visualiza el proyecto directamente sobre el terreno real para reducir errores y minimizar riesgos.">
+
+  <link rel="icon" href="/favicon.ico">
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = { theme: { extend: { colors: { kairu: {
+      50:'#eff6ff',100:'#dbeafe',200:'#bfdbfe',300:'#93c5fd',400:'#60a5fa',
+      500:'#3b82f6',600:'#2563eb',700:'#1d4ed8',800:'#1e40af',900:'#1e3a8a'
+    }}}}};
+  </script>
 
   <style>
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      color: #1f2933;
-      line-height: 1.6;
-      background: #ffffff;
-    }
-
-    header {
-      padding: 80px 20px;
-      text-align: center;
-      background: #f5f7fa;
-    }
-
-    header h1 {
-      font-size: 2.6rem;
-      margin-bottom: 20px;
-    }
-
-    header p {
-      max-width: 760px;
-      margin: 0 auto 30px;
-      font-size: 1.15rem;
-      color: #4a5568;
-    }
-
-    .cta {
-      display: inline-block;
-      padding: 14px 28px;
-      background: #0f172a;
-      color: #ffffff;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: 600;
-    }
-
-    section {
-      padding: 80px 20px;
-      max-width: 1100px;
-      margin: 0 auto;
-    }
-
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-
-    section p {
-      max-width: 800px;
-      margin-bottom: 20px;
-      color: #374151;
-    }
-
-    ul {
-      max-width: 800px;
-      padding-left: 20px;
-    }
-
-    li {
-      margin-bottom: 10px;
-    }
-
-    .image {
-      margin: 40px 0;
-      text-align: center;
-    }
-
-    .image img {
-      max-width: 100%;
-      border-radius: 8px;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 40px;
-      margin-top: 40px;
-    }
-
-    footer {
-      padding: 60px 20px;
-      background: #0f172a;
-      color: #e5e7eb;
-      text-align: center;
-    }
-
-    footer p {
-      max-width: 700px;
-      margin: 0 auto 20px;
-      font-size: 1rem;
-    }
-
-    .note {
-      font-size: 0.85rem;
-      color: #9ca3af;
-      margin-top: 30px;
-    }
+    .card { border-radius: 1rem; box-shadow: 0 8px 24px rgba(2,6,23,.06); background: rgba(255,255,255,.92); backdrop-filter: blur(6px); }
+    .container-narrow { max-width: 1100px; }
   </style>
 </head>
 
-<body>
+<body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
 
-<header>
-  <h1>Toma decisiones críticas antes de construir.<br>Ve el proyecto directamente sobre el terreno real.</h1>
-  <p>
-    Ayudamos a constructoras e ingenierías a reducir errores, alinear equipos y minimizar riesgos
-    visualizando el proyecto futuro sobre la parcela real, antes de que empiece la obra.
-  </p>
-  <a href="mailto:hello@kairutech.com" class="cta">Explorar un piloto técnico</a>
-</header>
+  <!-- HEADER (simple, coherente con tu web) -->
+  <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
+    <div class="mx-auto px-4 sm:px-6 container-narrow">
+      <div class="flex items-center justify-between h-16">
+        <a href="/" class="flex items-center gap-3">
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-kairu-600">
+            <path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z" stroke="currentColor" stroke-width="1.2" fill="none"/>
+          </svg>
+          <span class="font-semibold text-lg">Kairu <span class="text-kairu-600">Tech</span></span>
+        </a>
 
-<section>
-  <h2>El problema</h2>
-  <p>
-    En las fases tempranas de un proyecto, las decisiones más importantes se toman cuando aún todo es teórico:
-    planos, renders aislados, maquetas y múltiples interpretaciones según cada perfil.
-  </p>
-  <ul>
-    <li>Cambios de diseño cuando ya es tarde</li>
-    <li>Malentendidos entre ingeniería, dirección y cliente</li>
-    <li>Impacto visual o volumétrico mal evaluado</li>
-    <li>Retrasos en aprobaciones y validaciones</li>
-    <li>Re-trabajos evitables</li>
-  </ul>
-  <p><strong>Un error en esta fase no cuesta poco. Cuesta tiempo, dinero y reputación.</strong></p>
-</section>
+        <nav class="hidden md:flex items-center gap-6 text-sm">
+          <a href="#problema" class="hover:text-kairu-600">Problema</a>
+          <a href="#solucion" class="hover:text-kairu-600">Solución</a>
+          <a href="#piloto" class="hover:text-kairu-600">Piloto</a>
+          <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">Explorar piloto</a>
+        </nav>
 
-<section>
-  <h2>La solución</h2>
-  <p>
-    Nuestra solución permite visualizar una construcción futura directamente sobre el terreno real,
-    integrando el diseño del proyecto con su entorno.
-  </p>
-  <p>
-    No sustituye al BIM ni a la ingeniería.
-    <strong>Añade claridad allí donde hoy hay interpretación.</strong>
-  </p>
-
-  <div class="image">
-    <img src="assets/hero.jpg" alt="Visualización conceptual del proyecto sobre el terreno real">
-  </div>
-</section>
-
-<section>
-  <h2>Qué problemas resuelve</h2>
-
-  <div class="grid">
-    <div>
-      <h3>Impacto visual y volumétrico</h3>
-      <p>Alturas, volúmenes, escala real y relación con el entorno antes de construir.</p>
+        <button id="menuBtn" class="md:hidden p-2" aria-label="Abrir menú">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path d="M3 6h18M3 12h18M3 18h18"/>
+          </svg>
+        </button>
+      </div>
     </div>
 
-    <div>
-      <h3>Alineación entre equipos</h3>
-      <p>Todos los perfiles ven exactamente lo mismo. Menos interpretación, más consenso.</p>
+    <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
+      <div class="px-4 py-3 flex flex-col gap-3 text-sm">
+        <a href="#problema" class="hover:text-kairu-600">Problema</a>
+        <a href="#solucion" class="hover:text-kairu-600">Solución</a>
+        <a href="#piloto" class="hover:text-kairu-600">Piloto</a>
+        <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">Explorar piloto</a>
+      </div>
     </div>
+  </header>
 
-    <div>
-      <h3>Decisiones más rápidas</h3>
-      <p>Menos iteraciones, menos reuniones improductivas, más claridad desde el inicio.</p>
+  <!-- HERO -->
+  <section class="relative overflow-hidden">
+    <div class="mx-auto px-4 sm:px-6 pt-12 pb-10 container-narrow">
+      <div class="grid md:grid-cols-2 gap-10 items-center">
+        <div>
+          <p class="text-xs uppercase tracking-wider text-slate-500">Construcción · Ingeniería · Infraestructuras</p>
+
+          <h1 class="mt-2 text-4xl sm:text-5xl font-extrabold leading-tight">
+            Toma decisiones críticas <span class="text-kairu-600">antes</span> de construir.
+            <span class="block">Ve el proyecto sobre el <span class="text-kairu-600">terreno real</span>.</span>
+          </h1>
+
+          <p class="mt-5 text-lg text-slate-600">
+            Visualización contextual para reducir errores, alinear equipos y minimizar riesgos en proyectos complejos.
+          </p>
+
+          <div class="mt-6 flex gap-3 flex-wrap">
+            <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">Explorar un piloto técnico</a>
+            <a href="#piloto" class="px-5 py-3 rounded-xl border border-slate-300 font-medium hover:border-kairu-300">Qué incluye</a>
+          </div>
+
+          <p class="mt-4 text-xs text-slate-500">
+            No es “una demo de AR”. Es una herramienta para decidir con menos interpretación y menos riesgo.
+          </p>
+        </div>
+
+        <div class="card p-6">
+          <div class="grid grid-cols-2 gap-4">
+            <div class="p-4 rounded-xl bg-slate-50">
+              <p class="text-3xl font-bold">Menos</p>
+              <p class="text-sm text-slate-600">cambios tardíos</p>
+            </div>
+            <div class="p-4 rounded-xl bg-slate-50">
+              <p class="text-3xl font-bold">Más</p>
+              <p class="text-sm text-slate-600">alineación</p>
+            </div>
+            <div class="p-4 rounded-xl bg-slate-50">
+              <p class="text-3xl font-bold">Mejor</p>
+              <p class="text-sm text-slate-600">defensa de decisiones</p>
+            </div>
+            <div class="p-4 rounded-xl bg-slate-50">
+              <p class="text-3xl font-bold">Menos</p>
+              <p class="text-sm text-slate-600">incertidumbre</p>
+            </div>
+          </div>
+
+          <!-- IMAGEN HERO (opcional) -->
+          <div class="mt-5 rounded-xl overflow-hidden border border-slate-200">
+            <!-- Cambia la ruta por tu imagen -->
+            <img src="/assets/hero.jpg" alt="Visualización conceptual del proyecto sobre el terreno real" class="w-full h-56 object-cover">
+          </div>
+
+          <p class="mt-3 text-xs text-slate-500">
+            *Visualización conceptual con fines explicativos.
+          </p>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <div>
-      <h3>Reducción de riesgo</h3>
-      <p>Menos cambios tardíos, menos incertidumbre técnica y mejor defensa de decisiones.</p>
+  <!-- PROBLEMA -->
+  <section id="problema" class="py-12 bg-white/60 border-y border-slate-200/60">
+    <div class="mx-auto px-4 sm:px-6 container-narrow">
+      <h2 class="text-3xl font-bold">El problema</h2>
+      <p class="mt-3 text-slate-600 max-w-3xl">
+        Las decisiones más caras se toman cuando el proyecto aún es “teórico”: planos, renders aislados y múltiples interpretaciones.
+        Eso genera errores evitables en proyectos complejos.
+      </p>
+
+      <div class="mt-8 grid md:grid-cols-4 gap-6">
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Cambios tardíos</h3>
+          <p class="mt-2 text-sm text-slate-600">Modificaciones cuando el margen de maniobra ya es mínimo.</p>
+        </div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Desalineación</h3>
+          <p class="mt-2 text-sm text-slate-600">Ingeniería, dirección y cliente no ven lo mismo.</p>
+        </div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Retrasos</h3>
+          <p class="mt-2 text-sm text-slate-600">Validaciones lentas y aprobaciones bloqueadas.</p>
+        </div>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Riesgo</h3>
+          <p class="mt-2 text-sm text-slate-600">Impacto económico y reputacional por decisiones ambiguas.</p>
+        </div>
+      </div>
+
+      <p class="mt-6 text-sm text-slate-700">
+        <strong>Un error en esta fase no cuesta poco.</strong> Cuesta tiempo, dinero y reputación.
+      </p>
     </div>
-  </div>
-</section>
+  </section>
 
-<section>
-  <h2>Cómo se utiliza</h2>
-  <ul>
-    <li>Capturamos o utilizamos datos del terreno</li>
-    <li>Integramos el diseño del proyecto</li>
-    <li>Preparamos la visualización contextual</li>
-    <li>Se revisa en parcela, reuniones o material visual entregable</li>
-  </ul>
+  <!-- SOLUCIÓN -->
+  <section id="solucion" class="py-12">
+    <div class="mx-auto px-4 sm:px-6 container-narrow">
+      <h2 class="text-3xl font-bold">La solución</h2>
+      <p class="mt-3 text-slate-600 max-w-3xl">
+        Visualizar la construcción futura directamente sobre el terreno real, integrando el diseño del proyecto con su contexto.
+      </p>
+      <p class="mt-2 text-sm text-slate-600 max-w-3xl">
+        No sustituye al BIM ni a la ingeniería. <strong>Añade claridad donde hoy hay interpretación.</strong>
+      </p>
 
-  <div class="image">
-    <img src="assets/tablet-site.jpg" alt="Uso de tablet para visualizar el proyecto en la parcela">
-  </div>
-</section>
+      <div class="mt-8 grid md:grid-cols-2 gap-6 items-center">
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Qué problemas resuelve</h3>
+          <ul class="mt-3 text-sm text-slate-600 list-disc pl-5 space-y-2">
+            <li><strong>Impacto visual y volumétrico:</strong> alturas, escala y relación con el entorno.</li>
+            <li><strong>Alineación:</strong> todos los decisores ven lo mismo.</li>
+            <li><strong>Decisiones más rápidas:</strong> menos iteraciones improductivas.</li>
+            <li><strong>Menos riesgo:</strong> menos cambios tardíos y mejor defensa de decisiones.</li>
+          </ul>
+        </div>
 
-<section>
-  <h2>Cómo trabajamos</h2>
-  <p>
-    Empezamos con un <strong>piloto pagado y acotado</strong>, diseñado para validar un caso de uso concreto
-    antes de una implementación mayor.
-  </p>
-  <ul>
-    <li>1 parcela</li>
-    <li>1 proyecto</li>
-    <li>1 decisión crítica</li>
-  </ul>
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Cómo se utiliza (alto nivel)</h3>
+          <ol class="mt-3 text-sm text-slate-600 list-decimal pl-5 space-y-2">
+            <li>Captura o uso de datos del terreno</li>
+            <li>Integración del diseño del proyecto</li>
+            <li>Preparación de visualización contextual</li>
+            <li>Revisión en parcela, reuniones o material visual entregable</li>
+          </ol>
 
-  <div class="image">
-    <img src="assets/meeting.jpg" alt="Reunión técnica revisando la visualización del proyecto">
-  </div>
-</section>
+          <div class="mt-5 rounded-xl overflow-hidden border border-slate-200">
+            <img src="/assets/tablet-site.jpg" alt="Uso en parcela con tablet" class="w-full h-44 object-cover">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<section>
-  <h2>Para quién es</h2>
-  <p><strong>Diseñado para:</strong></p>
-  <ul>
-    <li>Grandes constructoras</li>
-    <li>Ingenierías e infraestructuras</li>
-    <li>Proyectos complejos (&gt;10 M €)</li>
-  </ul>
+  <!-- PILOTO -->
+  <section id="piloto" class="py-12 bg-gradient-to-r from-kairu-600 to-kairu-800 text-white">
+    <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
+      <div class="md:col-span-2">
+        <h2 class="text-3xl font-bold">Piloto técnico (pagado y acotado)</h2>
+        <p class="mt-2 text-white/85">
+          Empezamos con un piloto cerrado para validar un caso real antes de una implementación mayor.
+        </p>
 
-  <p><strong>No diseñado para:</strong></p>
-  <ul>
-    <li>Curiosidad tecnológica</li>
-    <li>Proyectos pequeños</li>
-    <li>Uso comercial o marketing básico</li>
-  </ul>
-</section>
+        <div class="mt-6 grid sm:grid-cols-3 gap-4">
+          <div class="bg-white/10 rounded-xl p-4">
+            <p class="text-xs uppercase tracking-wider text-white/70">Alcance</p>
+            <p class="mt-1 font-semibold">1 parcela</p>
+          </div>
+          <div class="bg-white/10 rounded-xl p-4">
+            <p class="text-xs uppercase tracking-wider text-white/70">Proyecto</p>
+            <p class="mt-1 font-semibold">1 diseño</p>
+          </div>
+          <div class="bg-white/10 rounded-xl p-4">
+            <p class="text-xs uppercase tracking-wider text-white/70">Objetivo</p>
+            <p class="mt-1 font-semibold">1 decisión crítica</p>
+          </div>
+        </div>
 
-<footer>
-  <p>
-    ¿Tienes un proyecto donde una mala decisión sería cara?<br>
-    Hablemos de si un piloto tendría sentido en tu caso concreto.
-  </p>
-  <a href="mailto:hello@kairutech.com" class="cta">Explorar un piloto técnico</a>
+        <p class="mt-5 text-sm text-white/85">
+          Incluye: preparación de la visualización, sesión guiada (parcela u oficina), material visual entregable y conclusiones para decisión interna.
+        </p>
+      </div>
 
-  <p class="note">
-    Las visualizaciones mostradas son conceptuales y tienen fines explicativos.
-  </p>
-</footer>
+      <div class="md:justify-self-end">
+        <a href="/contacto.html" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
+          Hablar del piloto
+        </a>
+        <p class="mt-3 text-xs text-white/70">
+          *Visualizaciones conceptuales con fines explicativos.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
+    <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
+      <p>© <span id="year"></span> Kairu Tech · Madrid & London</p>
+      <div class="flex items-center gap-4">
+        <a href="/legal.html" class="hover:text-kairu-600">Legal</a>
+        <a href="/contacto.html" class="hover:text-kairu-600">Contacto</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+    document.getElementById('menuBtn').addEventListener('click', ()=>{
+      document.getElementById('mobileMenu').classList.toggle('hidden');
+    });
+  </script>
 
 </body>
 </html>
